--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <a class="btn-text" href="https://twitter.com/marbleprotocol">Twitter</a>
                 </li>
                 <li class="nav-link">
-                    <a class="btn-text" href="https://angel.co/marble-protocol">Jobs</a>
+                    <a class="btn-text" href="https://danhon.substack.com/archive">More</a>
                 </li>
             </ul>
         </nav>
